<resources>
    <string name="app_name">Inventory App V1</string>
    <string name="dummy_insert">Insert Dummy Data</string>
    <string name="dummyName">DummyName</string>
    <string name="dummySupplier">DummySupplier</string>
    <string name="empty_view_text">Sorry, no items to display! Please insert a new item.</string>
    <string name="sale_button">Sale</string>
    <string name="item_description">Description</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="item_name">Item Name</string>
    <string name="add">+</string>
    <string name="quantity">Quantity</string>
    <string name="remove">-</string>
    <string name="supplier_phone_number">Supplier Phone Number</string>
    <string name="_0">0</string>
    <string name="order">Order</string>
    <string name="insert_illeegalexception">Insertion is not supported for</string>
    <string name="require_name">Item requires a name</string>
    <string name="price_error">Price must be typed and be strictly positive</string>
    <string name="quantity_error">Quantity must be present and positive</string>
    <string name="supplier_error">Supplier required</string>
    <string name="phone_error">Must enter a phone</string>
    <string name="price">Price</string>
    <string name="edit">Edit</string>
    <string name="quantity_adapter">Quantity: </string>
    <string name="price_adapter">Price: $</string>
    <string name="quantity_hint">Quantity</string>
    <string name="name_required">Please enter a name</string>
    <string name="supplier_required">Please enter a supplier</string>
    <string name="invalid_price">Price has to be an integer or a float</string>
    <string name="price_required">Please enter a price</string>
    <string name="invalid_phone">Please enter a valid phone number</string>
    <string name="phone_required">Please enter a valid phone number</string>
    <string name="invalid_quantity">Please enter a valid quantity</string>
    <string name="quantity_required">Please enter a quantity</string>
    <string name="insert_failed">Insert Failed</string>
    <string name="item_inserted">Item inserted</string>
    <string name="update_failed">Update failed</string>
    <string name="update_successful">Update successful</string>
    <string name="unsavedchange_dialog">Are you sure you don\'t want to save your changes?</string>
    <string name="discard_unsaved">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="item_deleted">This item will be deleted permanently</string>
    <string name="delete">Delete</string>
    <string name="cancel_deletion">Cancel</string>
    <string name="delete_failed">Delete failed</string>
    <string name="item_deleted_correctly">Item deleted</string>
</resources>
